Now uses ProcessStreamGobbler to avoid blocking stdout/stderr with large jps process output
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@111443 523d945c-050c-4681-91ec-863ad3bb968a